<resources>
    <string name="sp_file">SPfile</string>
    <string name="logado">logado</string>
    <string name="user">userLogado</string>

    <string name="app_name">CityHelp</string>
    <string name="utilizador">Utilizador</string>
    <string name="palavra_passe">Palavra-Passe</string>
    <string name="title_activity_notas">NotasActivity</string>
    <string name="empty_not_inserted">Nota com campos vazios: não inserida</string>
    <string name="empty_not_updated">Nota com campos vazios: não editada</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="edit_nota">Editar Nota</string>
    <string name="add_nota">Adicionar Nota</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="delete_note_confirm">Deseja eliminar a nota?</string>
    <string name="title">Título</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_add">Adicionar</string>
    <string name="title_opcoes">Opções</string>
    <string name="tipo">Tipo</string>
    <string name="conteudo">Conteúdo</string>
    <string name="sair">Terminar Sessão</string>
    <string name="submeter">Submeter</string>
    <string name="empty">Preencha todos os campos</string>
    <string name="delete_activity_confirm">Deseja eliminar esta situação?</string>
    <string name="notas">Minhas Notas</string>
    <string name="add_situacao">Adicionar Situação</string>
    <string name="edit_situacao">Editar Situação</string>
    <string name="filtro_distancia">Filtro de distância:</string>
    <string name="filtro_tipo">Filtro de Tipos:</string>
    <string name="norte">Norte</string>
    <string-array name="tiposSituacao">
        <item></item>
        <item>Problema</item>
        <item>Sugestão</item>
        <item>Evento</item>
    </string-array>
</resources>