<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.add.AddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <ImageView
            android:id="@+id/iconEdit"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/ic_baseline_image_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="10dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/addSituacaoTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="10dp"
                android:text="ADD SITUACAO"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textTituloSituacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tipo"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/textTipoSituacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/conteudo"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/textDescSituacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="5"
            android:lines="5"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

    </LinearLayout>

</LinearLayout>